Code: Make sure diff lines don't overflow - #253

--- a/github-dark.css
+++ b/github-dark.css
@@ -483,6 +483,7 @@
   .blob-code-inner {
     white-space: pre-wrap !important;
     word-break: break-all !important;
+    display: block !important;
   }
   /* invisible border */
   .gisttabs a:not(.selected), .gisttabs a:not(.selected):hover,
